tests/ui/const-generics/adt_const_params/const_param_ty_impl_bad_field.stderr
error[E0204]: the trait `ConstParamTy` cannot be implemented for this type
  --> $DIR/const_param_ty_impl_bad_field.rs:10:36
   |
LL | struct CantParam(NotParam);
   |                  -------- this field does not implement `ConstParamTy`
LL |
LL | impl std::marker::ConstParamTy for CantParam {}
   |                                    ^^^^^^^^^

error[E0204]: the trait `ConstParamTy` cannot be implemented for this type
  --> $DIR/const_param_ty_impl_bad_field.rs:13:10
   |
LL | #[derive(std::marker::ConstParamTy, Eq, PartialEq)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ in this derive macro expansion
LL |
LL | struct CantParamDerive(NotParam);
   |                        -------- this field does not implement `ConstParamTy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
   |
   = note: in this expansion of `#[derive(std::marker::ConstParamTy)]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0204`.
